<resources>
    <string name="service_key">
        c3a34779206afd21cd4ef779a7483ddc
    </string>
    <string name="map_key">
        AIzaSyCHDPKAe5ZBH4oj1sbdj80sYlObJbVRVoU
    </string>
    <string name="app_name">집사야, 산책 가즈아</string>
    <string name="app_title">집사야, 산책 가즈아</string>
    <string name="main_walkTip">건강한 산책 Tip!</string>
    <string name="main_goWalk">산책 GO!</string>
    <string name="main_walkDiary">집사의 산책일지</string>
    <string name="main_title_weather">날씨</string>
    <string name="main_title_airCondition">대기 상태</string>
    <string name="main_title_temper">체감 온도</string>
    <string name="main_viewer_airCondition">양호</string>
    <string name="main_viewer_weather">좋음</string>
    <string name="main_viewer_temper">좋음</string>
    <string name="main_weatherResult">오늘은 산책하기 좋은 날!</string>
    <string name="main_location">현재위치설정</string>

    <string name="go_walk_meter_count">0.0</string>
    <string name="go_walk_count_calorie">0</string>
    <string name="go_walk_count_time">00.00</string>
    <string name="go_walk_title_calorie">칼로리</string>
    <string name="go_walk_title_time">시간(분)</string>
    <string name="go_walk_title_distance">미터(m)</string>
    <string name="go_walk_pause">일시 정지</string>
    <string name="go_walk_stopWalk">산책 종료</string>
    <string name="go_walk_start">산책 Start!</string>

    <string name="record_subheading_walk_log">산책 기록</string>
    <string name="record_subheading_time">시간</string>
    <string name="record_subheading_distance">거리</string>
    <string name="record_subheading_calorie">칼로리</string>
    <string name="record_count_distance">0.0</string>
    <string name="record_count_calorie">0</string>
    <string name="record_count_time">00:00</string>
    <string name="record_show_date">오늘 날짜 나오는 부분</string>
    <string name="record_subheading_memo">메모하는 공간 입니다.</string>
    <string name="record_guide_user_input">텍스트를 입력하세요</string>
    <string name="record_guide_map">산책 경로</string>
    <string name="record_memo_complete">작성 완료</string>
    <string name="diary_heading">일지 리스트</string>
    <string name="diary_subheading_date">날짜</string>
    <string name="diary_guide_memo_position">메모가 저장될 위치</string>
    <string name="go_walk_btn_diary">집사의 산책일지</string>
    <string name="go_walk_btn_record">산책 기록</string>
    <string name="record_heading">산책 기록</string>

    <string name="main_btn_diary">집사의 일지 모음</string>
    <string name="main_btn_walk_record">산책 기록</string>

    <string name="meal_subheading_how_food">오늘의 식사는 어땠나요?</string>
    <string name="meal_subheading_meal_time">식사 시간</string>
    <string name="meal_subheading_meal_type">종류</string>
    <string name="meal_btn_main_dish">식사</string>
    <string name="meal_btn_side_dish">간식</string>
    <string name="meal_subheading_meal_name">사료명</string>
    <string name="meal_user_guide_food_name">사료명을 입력해 주세요</string>
    <string name="meal_subheading_food_how_much">식사량</string>
    <string name="meal_user_guide_how_much">ex) 120g</string>
    <string name="meal_btn_record_complete">작성 완료</string>
    <string name="main_btn_meal_record">식사 기록</string>
    <string name="meal_user_guide_time">00시 00분</string>
    <string name="meal_user_guide_date">2020년 5월 4일</string>
    <string name="meal_heading">식사 기록장</string>
    <string name="main_btn_diary_heading">식사 모음집</string>
    <string name="main_btn_walk_log">산책 모음집</string>
    <string name="go_walk_memo_user_guide">메모를 입력해 주세요</string>
    <string name="go_walk_btn_camera">사진촬영</string>
    <string name="stn_memo">메모</string>
    <string name="stn_insert_memo">메모를 입력해 주세요.</string>
    <string name="stn_side_dish">간식</string>
    <string name="stn_main_dish">식사</string>
    <string name="stn_meal_diary">식사 일지</string>
    <string name="stn_meal_time">식사 시간</string>
    <string name="stn_show_time_info">시간이 표시될 부분</string>
    <string name="stn_subheading_meal_type">식사 종류</string>
    <string name="stn_show_selected_type">식사 타입이 표시될 부분</string>
    <string name="stn_food_name">사료명</string>
    <string name="stn_show_selected_name">사료명이 표시될 부분</string>
    <string name="stn_subheading_food_amount">식사량</string>
    <string name="stn_show_selected_amount">식사량이 표시될 부분</string>
    <string name="str_setting">설정</string>
    <string name="str_setting_dog_name">강아지의 이름은?</string>
    <string name="str_hint_input_name">강아지의 이름을 입력해 주세요</string>
    <string name="str_asking_size">강아지의 사이즈는?</string>
    <string name="str_setting_size_small">소형견</string>
    <string name="str_setting_size_medium">중형견</string>
    <string name="str_setting_size_large">대형견</string>
    <string name="str_btn_size_helper">혹시 강아지의 사이즈를 모르시나요?</string>
    <string name="str_asking_dog_weight">강아지의 무게는?</string>
    <string name="str_example_weight">ex)5</string>
    <string name="str_weight_type">Kg</string>
    <string name="str_btn_setting_complete">설정 완료</string>
    <string name="str_short_time">하루에 30분~1시간</string>
    <string name="str_medium_time">하루에 1시간 30분</string>
    <string name="str_long_time">하루 최소 2시간</string>
    <string name="str_dog_info_heading">강아지 정보 확인</string>
    <string name="stn_dog_name_subheading">강아지 이름:</string>
    <string name="stn_show_dog_name">강아지 이름이 표시될 위치</string>
    <string name="stn_walk_distance_subheading">권장 산책량:</string>
    <string name="stn_show_walk_recommend">권장 산책량이 표시될 공간</string>
    <string name="stn_dog_weight_subheading">무게:</string>
    <string name="stn_show_dog_weight">무게가 표시될 공간</string>
    <string name="stn_kg">Kg</string>
    <string name="stn_daily_food_amount_subheading">하루 권장 식사량:</string>
    <string name="stn_show_daily_recommend_food">식사량이 표시될 부분</string>
    <string name="stn_go_out">나가기</string>


    <string name="button_register">등록</string>
    <string name="msg_memo_input">메모를 입력해주세요</string>
    <string name="permission_2"><![CDATA[설정>권한 에서 권한을 허용할 수 있습니다.]]></string>
    <string name="permission_1"><![CDATA[[설정]  >>>  [권한] 에서 권한을 허용할 수 있습니다.]]></string>
    <string name="permission_picture">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>
    <string name="permission_setting"><![CDATA[[설정] >>> [권한] 에서 권한을 허용할 수 있습니다.]]></string>
    <string name="stopwatch_default">00:00:00</string>

</resources>
