<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_setting"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_setting_dog_name"
        android:textSize="25sp"
        android:layout_marginTop="50dp" />

    <EditText
        android:id="@+id/edit_dog_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:autofillHints="no"
        android:hint="@string/str_hint_input_name"
        android:gravity="center"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/str_asking_size"
        android:textSize="25sp" />
    <RadioGroup
        android:id="@+id/radio_group_size_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="9" >

        <RadioButton
            android:id="@+id/radio_btn_size_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_setting_size_small"
            android:layout_weight="3" />

        <RadioButton
            android:id="@+id/radio_btn_size_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_setting_size_medium"
            android:layout_weight="3" />

        <RadioButton
            android:id="@+id/radio_btn_size_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_setting_size_large"
            android:layout_weight="3" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_search_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_btn_size_helper" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_asking_dog_weight"
        android:textSize="25sp"
        android:layout_marginTop="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <EditText
            android:id="@+id/edit_dog_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:autofillHints="no"
            android:hint= "@string/str_example_weight"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:layout_weight="2"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_weight_type"
            android:textSize="20sp"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_setting_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_btn_setting_complete"
        android:layout_marginTop="50dp" />


</LinearLayout>