<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MealActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="식사 LOG"
            android:textSize="22sp"
            android:textColor="#ffffff" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/meal_heading"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/heading_meal_record"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/meal_subheading_how_food"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/meal_subheading_meal_time"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/show_meal_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="no"
                android:gravity="center"
                android:hint="@string/meal_user_guide_date"
                android:inputType="date"
                android:text=""
                android:textSize="20sp" />

            <EditText
                android:id="@+id/show_meal_what_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints="no"
                android:gravity="center"
                android:hint="@string/meal_user_guide_time"
                android:text=""
                android:textSize="20sp"
                android:inputType="time"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/meal_subheading_meal_type"
                android:textSize="20sp" />
            <RadioGroup
                android:id="@+id/radio_group_meal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <RadioButton
                    android:id="@+id/radio_btn_main_dish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stn_main_dish"
                    android:layout_weight="5"/>
                <RadioButton
                    android:id="@+id/radio_btn_side_dish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stn_side_dish"
                    android:layout_weight="5"/>
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/meal_subheading_meal_name"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_food_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints="no"
                android:gravity="center"
                android:hint="@string/meal_user_guide_food_name"
                android:inputType="text"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/meal_subheading_food_how_much"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_food_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints="no"
                android:gravity="center"
                android:hint="@string/meal_user_guide_how_much"
                android:inputType="text"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stn_memo"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_text_meal_memo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text=""
                android:autofillHints="no"
                android:gravity="center"
                android:hint="@string/stn_insert_memo"
                android:inputType="text"/>

            <Button
                android:id="@+id/btn_meal_record_complete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/meal_btn_record_complete"
                android:textSize="20sp" />

        </LinearLayout>


    </ScrollView>


</LinearLayout>