<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiaryActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_record_list_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:text="@string/diary_heading"
            android:textSize="30sp" />
<!--    기록한 날짜를 보여주는 텍스트 뷰-->
        <TextView
            android:id="@+id/subheading_record_list_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diary_subheading_date"
            android:textSize="20sp"
            android:layout_below="@id/text_record_list_"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/show_record_list_recorded_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="2020.05.04"
            android:textSize="20sp"
            android:layout_toRightOf="@id/subheading_record_list_date"
            android:layout_below="@id/text_record_list_"
            android:layout_marginLeft="20dp"
            android:layout_toEndOf="@id/subheading_record_list_date"
            android:layout_marginStart="20dp" />

        <TextView
            android:id="@+id/subheading_diary_title_memo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stn_memo"
            android:textSize="20sp"
            android:layout_below="@id/subheading_record_list_date"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/show_record_list_memo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/diary_guide_memo_position"
            android:textSize="20sp"
            android:layout_below="@id/subheading_diary_title_memo"
            android:gravity="center"/>

        <TextView
            android:id="@+id/subheading_diary_title_meal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stn_meal_diary"
            android:textSize="20sp"
            android:layout_below="@id/show_record_list_memo"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/subheading_meal_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/subheading_diary_title_meal"
            android:text="@string/stn_meal_time"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/show_meal_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stn_show_time_info"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_below="@id/subheading_meal_time"/>

        <TextView
            android:id="@+id/subheading_meal_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stn_subheading_meal_type"
            android:textSize="20sp"
            android:layout_below="@id/show_meal_time"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/show_meal_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stn_show_selected_type"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_below="@id/subheading_meal_type" />

        <TextView
            android:id="@+id/subheading_food_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stn_food_name"
            android:textSize="20sp"
            android:layout_below="@id/show_meal_type"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/show_food_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stn_show_selected_name"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_below="@id/subheading_food_name" />

        <TextView
            android:id="@+id/subheading_meal_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stn_subheading_food_amount"
            android:textSize="20sp"
            android:layout_below="@id/show_food_name"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/show_meal_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stn_show_selected_amount"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_below="@id/subheading_meal_amount" />

        <ListView
            android:id="@+id/meal_list_view_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_meal_diary_out"/>

        <Button
            android:id="@+id/btn_meal_diary_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stn_go_out"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:layout_below="@id/show_meal_amount" />


    </RelativeLayout>


</androidx.cardview.widget.CardView>