<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_setting_dog_name"
        android:textSize="25sp"
        android:layout_marginTop="50dp" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:gravity="center"
        android:hint="@string/str_hint_input_name"
        android:inputType="text"
        android:text="" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="강아지의 나이는?"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <EditText
            android:id="@+id/edit_dog_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text=""
            android:gravity="center"
            android:layout_gravity="center"
            android:hint="나이를 입력해주세요"
            android:layout_weight="1"
            android:layout_marginLeft="80dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="살"
            android:textSize="20sp"
            android:layout_weight="3" />


    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_asking_dog_weight"
        android:textSize="25sp"
        android:layout_marginTop="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <EditText
            android:id="@+id/edit_dog_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:autofillHints="no"
            android:hint= "@string/str_example_weight"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:layout_weight="2"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_weight_type"
            android:textSize="20sp"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="강아지의 견종은?"
        android:textSize="25sp"
        android:layout_marginTop="50dp" />

    <Spinner
        android:id="@+id/dog_type_array"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:entries="@array/dog_type"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/btn_setting_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_btn_setting_complete"
        android:layout_marginTop="50dp" />

</LinearLayout>